--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "nodemailer": "^6.10.1",
         "path-browserify": "^1.0.1",
         "path-to-regexp": "^8.2.0",
+        "pdfkit": "^0.17.0",
         "pg": "^8.14.1",
         "pg-hstore": "^2.3.4",
         "process": "^0.11.10",
