--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "react-bootstrap": "^2.7.2",
         "react-dom": "^19.1.0",
         "react-dropzone": "^14.3.8",
+        "react-hook-form": "^7.56.1",
         "react-icons": "^5.5.0",
         "react-lottie": "^1.2.10",
         "react-router-dom": "^7.4.1",
